--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev2": "node server.js"
   },
   "dependencies": {
+    "mysql": "^2.18.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
