--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "dev2": "node server.js"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "mysql": "^2.18.1",
     "next": "13.0.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
